<resources>
    <string name="app_name">Xvs.O in Space</string>
    <string name="app_label">Xvs.O in Space</string>
    <string name="profile_label">Your Profile</string>
    <string name="settings_label">Settings</string>
    <string name="log_in_activity">Log In</string>
    <string name="sign_up_activity">Sign Up</string>
    <string name="reset_password_activity">Reset Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">E-mail</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your e-mail and password or sign up</string>
    <string name="change_email">Change e-mail</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset e-mail</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="online_users_activity">Multi Player</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New e-mail</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered e-mail to sent you password reset instructions.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="invalid_field">Field can\'t be empty</string>
    <string name="last_name_too_long">Last name too long</string>
    <string name="first_name_too_long">First name too long</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="please_wait">Please wait...</string>
    <string name="multi_player">Multi Player</string>
    <string name="about">About</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="submit_button">Submit</string>
    <string name="player_x">Player X </string>
    <string name="player_y">Player Y </string>
    <string name="player_x_won">Player 1 has won! (X)</string>
    <string name="player_y_won">Player 2 has won! (O)</string>
    <string name="draw">It\'s a draw!</string>
    <string name="home_menu" translatable="false">Home</string>
    <string name="new_round_menu">New Round</string>
    <string name="reset_game_menu">Reset Game</string>
    <string name="always_win_menu">Always win</string>
    <string name="profile_menu">PROFILE</string>
    <string name="preferences_menu">SETTINGS</string>
    <string name="log_out_menu">Log out</string>
    <string name="user_id" translatable="false">ID</string>
    <string name="send_request">Send request to</string>
    <string name="accept_request">Accept request from</string>
    <string name="please_register">Please register</string>
    <string name="enter_email_password">Enter your e-mail and password for registration</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="new_game">Reset Game</string>
    <string name="alert_dialog_title">Accept invitation</string>
    <string name="alert_dialog_content"> %1$s has joined your game, do you want to accept the challenge?</string>
    <string name="alert_dialog_yes">YES</string>
    <string name="alert_dialog_no">NO</string>
    <string name="cosmonaut_image">Cosmonaut Image</string>
    <string name="welcome">Greetings Earthling,</string>
    <string name="about_the_app">If you loved playing XvsO, but also like to set your imagination free, this is the perfect game for you! Below you can find some general rules for the game:</string>
    <string name="rule_1">   \u2022 the board consists of 3x3 cells</string>
    <string name="rule_2">   \u2022 two players play alternatively, marking one empty cell at a time</string>
    <string name="rule_3">   \u2022 the objective (equal to 3) is the number of markings to achieve in line (horizontally, vertically or diagonally)</string>
    <string name="spanish_support">The app supports beside English, Spanish language as well.</string>
    <string name="login_logo">"logo image for the log in screen"</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="game_number">Game Number</string>
    <string name="user_name">User Name</string>
    <string name="join_game">Join</string>
    <string name="animated_image">Animmated XvsO image</string>
    <string name="has_won">%1$s has won</string>
    <string name="timer_message">Seconds remaining: %2$s</string>
    <string name="player_name_score" translatable="false">%1$s: %2$d</string>
    <string name="btn_single_player_human">Single Player (Human)</string>
    <string name="btn_single_player_computer">Single Player (Computer)</string>
    <string name="btn_multiplayer">Multi Player (Online)</string>
    <string name="btn_about">About</string>
    <string name="rocket_image">animated rocket image</string>
    <string name="turn_order">Your turn</string>
    <string name="players_turn">%1$s has the move</string>
    <string name="game_over">00:00</string>
    <string name="time_left">00:%1$d</string>
    <string name="message_text_widget">Current score of the last game is: </string>
    <string name="initial_score" translatable="false">0</string>
    <string name="settings_menu">Adjustments</string>
    <string name="profile_image">user\'s profile image</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync e-mail periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming e-mails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="moon_image">moon image</string>
    <string name="new_round">New Round</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="sound">sound</string>
    <string name="music">music</string>
    <string name="log_out">Log out</string>
    <string name="alien1Text" translatable="true">
        <![CDATA[
        <b>Name: Tasp</b>
        <br></br>
        <br></br>
        <b>Characteristics</b>
        <br></br>
        <br><b>Name on earth:</b> Humans call it Monoculus</b>
        <br></br>
        <br><b>Race: </b>Amphibio</br>
        <br></br>
        <br><b>Height: </b>60 - 80cm (for adult of its species)</br>
        <br></br>
        <br><b>Adulthood: </b>under 14 years</br>
        <br></br>
        <br><b>Planet: </b>Pegasus 3</br>
        <br></br>
        <br><b>Tasp\'s story: </b></br>
        <br>On their home planet, Pegasus 3, the climate is very stormy most of the part of the year, but their amphibian nature helped them to find abundant food during the whole year. Their planet is home to usually smaller life forms, Tasp being the largest.</br>
        <br></br>
        <br></br>
      ]]>
    </string>
    <string name="alien2Text" translatable="true">
        <![CDATA[
        <b>Name: Obgu</b>
        <br></br>
        <br></br>
        <b>Characteristics</b>
        <br></br>
        <br><b>Name on earth:</b> Humans call it Happy Eyed Face</b>
        <br></br>
        <br><b>Race: </b>Alborian</br>
        <br></br>
        <br><b>Height: </b>30 - 40cm (for adult of its species)</br>
        <br></br>
        <br><b>Adulthood: </b>under 7 years</br>
        <br></br>
        <br><b>Planet: </b>Alborus</br>
        <br></br>
        <br><b>Obgu\'s story: </b></br>
        <br>Alborians are forming a society with common support for each other, but they live under strict rules. They are very friendly and helpful to humans. Having an Alborian on a spaceship can be very beneficial, as they are great navigators. Alborus is a planet wih moderate climate and luxuriant plants, the food of the Alborians is mainly plat base and they eat several species of snails for protein.</br>
        <br></br>
        <br></br>
      ]]>
    </string>
    <string name="alien3Text" translatable="true">
        <![CDATA[
        <b>Name: Eshu</b>
        <br></br>
        <br></br>
        <b>Characteristics</b>
        <br></br>
        <br><b>Name on earth:</b> Yellow Snail</b>
        <br></br>
        <br><b>Race: </b>Redolan</br>
        <br></br>
        <br><b>Height: </b>30 - 40cm (for adult of its species)</br>
        <br></br>
        <br><b>Adulthood: </b>under 8 years</br>
        <br></br>
        <br><b>Planet: </b>Redolus</br>
        <br></br>
        <br><b>Eshu\'s story: </b></br>
        <br>The Redolans developed from the same ancestors as the Alborians. Million of years before, both the Alborians and the Redolans, lived together on the same planet, which was a supernova. They live also in a developed society, they are omnivores, but they are able to sustain themselves also only with plant-based food. They make excellent traders and scientists.</br>
        <br></br>
        <br></br>
      ]]>
    </string>
    <string name="alien4Text" translatable="true">
        <![CDATA[
        <b>Name: Ushuqop</b>
        <br></br>
        <br></br>
        <b>Characteristics</b>
        <br></br>
        <br><b>Name on earth:</b> Blue Monster</b>
        <br></br>
        <br><b>Race: </b>Atlasian</br>
        <br></br>
        <br><b>Height: </b>90 - 110 cm (for adult of its species)</br>
        <br></br>
        <br><b>Adulthood: </b>under 11 years</br>
        <br></br>
        <br><b>Planet: </b>Atlas 2</br>
        <br></br>
        <br><b>Ushuqop\'s story: </b></br>
        <br>Ushuqop comes from the cold planet Atlas 2, one of the 6 planets from the Atlas planet cluster. Atlasians hunt for animals in groups. Cruel in war, but very patient and polite with guests, they indulge in hedonistic pleasure like alcohol, music and gambling. Their strong strategic thinking and coleric nature make then a fearful enemy.</br>
        <br></br>
        <br></br>
      ]]>
    </string>
    <string name="choose_alien">Choose the ALIEN against which you want to play!</string>
    <string name="slide_next"><![CDATA[->>]]></string>
    <string name="alien_click">Keep a long click on the alien to find out more about it.</string>
    <string name="single_player_button">single player (alien)</string>
    <string name="player_ai_button">single player (ai)</string>
    <string name="multiplayer_galaxy_button">multiplayer (galaxy)</string>
    <string name="about_button">About</string>
</resources>