<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/MatchParent"
        android:layout_margin="@dimen/margin_40">

        <Button
            android:id="@+id/single_player_button"
            style="@style/HomeButton"
            android:layout_centerInParent="true"
            android:text="@string/single_player"/>

        <Button
            android:id="@+id/multi_player_button"
            style="@style/HomeButton"
            android:layout_below="@+id/single_player_button"
            android:text="@string/multi_player" />

        <Button
            android:id="@+id/about_button"
            style="@style/HomeButton"
            android:layout_below="@+id/multi_player_button"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/app_title"
            style="@style/WrapContent"
            android:layout_centerHorizontal="@bool/value_true"
            android:layout_weight="1"
            android:text="@string/app_label"
            android:textSize="@dimen/text_size_xlarge" />
    </RelativeLayout>
</layout>