<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    android:padding="@dimen/padding_20">

    <ImageView
        android:id="@+id/no_score_image"
        style="@style/WrapContent"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/player1_text_widget"
        style="@style/WrapContent"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/padding_10"
        android:text="@string/player_x"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player1_result_widget"
        style="@style/WrapContent"
        android:layout_below="@+id/player1_text_widget"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/initial_score"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player2_text_widget"
        style="@style/WrapContent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/padding_10"
        android:text="@string/player_y"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player2_result_widget"
        style="@style/WrapContent"
        android:layout_below="@+id/player2_text_widget"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_10"
        android:text="@string/initial_score"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_text_view"
        style="@style/MatchWrap"
        android:layout_marginBottom="@dimen/padding_10"
        android:gravity="center"
        android:padding="@dimen/padding_2"
        android:text="@string/message_text_widget" />
</RelativeLayout>