<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_20"
        android:background="@drawable/nightsky"
        app:layoutDescription="@xml/activity_welcome_xml_constraintlayout_scene">

        <ImageView
            android:id="@+id/ufo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ufo_transparent" />

        <Button
            android:id="@+id/single_player_button"
            style="@style/MatchWrap"
            android:background="@drawable/button_purple_transparent"
            android:text="@string/single_player_button"
            android:textStyle="bold"
            android:fontFamily="@font/futuristic_font"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/computer_player_button"
            style="@style/MatchWrap"
            android:background="@drawable/button_purple_transparent"
            android:fontFamily="@font/futuristic_font"
            android:text="@string/player_ai_button"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/multi_player_button"
            style="@style/MatchWrap"
            android:textStyle="bold"
            android:background="@drawable/button_purple_transparent"
            android:fontFamily="@font/futuristic_font"
            android:text="@string/multiplayer_galaxy_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/policy_attributions_button"
            style="@style/MatchWrap"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:fontFamily="@font/futuristic_font"
            android:background="@drawable/button_purple_transparent"
            android:text="Policy &amp; Attributions"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/about_button"
            style="@style/MatchWrap"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:fontFamily="@font/futuristic_font"
            android:background="@drawable/button_purple_transparent"
            android:text="@string/about_button"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/app_title"
            style="@style/WrapContent"
            android:layout_centerHorizontal="@bool/value_true"
            android:fontFamily="@font/futuristic_font"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>