<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nightsky">

    <TextView
        android:id="@+id/choose_alien_text_view"
        android:text="@string/choose_alien"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/scroll_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_size_large"
        android:text="@string/slide_next"
        android:layout_below="@+id/choose_alien_text_view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/alien_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_text"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="11dp"
        android:gravity="center_horizontal"
        android:text="@string/alien_click" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/alien_view_pager_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true" />

    <include layout="@layout/alien_description_dialog" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_to_menu"
        android:textSize="12sp"
        android:onClick="onExitAlienScreen"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/white"
        android:background="@android:color/transparent" />
</RelativeLayout>