<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    tools:context="com.game.xvso.uifirebase.ResetPasswordActivity">

    <LinearLayout
        style="@style/MatchParent"
        android:gravity="center"
        android:background="@drawable/earth"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_10"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MatchWrap"
            android:textColorHint="@android:color/white"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/MatchWrap"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:counterEnabled="@bool/value_true"
                android:textColorHint="@android:color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:background="@drawable/edit_field" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/button_purple_transparent"
            android:text="@string/btn_reset_password"
            android:elevation="6dp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="#00000000"
            android:text="@string/btn_back"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/margin_20"
        android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>