<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/MatchParent"
        android:background="@android:color/black"
        android:fitsSystemWindows="@bool/value_true"
        tools:context="com.example.xvso.uifirebase.LoginActivity">

        <LinearLayout
            style="@style/MatchParent"
            android:background="@drawable/earth"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <!-- Email EditText -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MatchWrap"
                android:textColorHint="@android:color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    style="@style/MatchWrap"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    app:counterEnabled="@bool/value_true"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/edit_field"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Password EditText -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MatchWrap"
                android:textColorHint="@android:color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    style="@style/MatchWrap"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:hint="@string/hint_password"
                    android:background="@drawable/edit_field"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Login Button -->
            <!-- Reset Password Button -->
            <Button
                android:id="@+id/btn_login"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/button_purple_transparent"
                android:elevation="6dp"
                android:text="@string/btn_login"
                android:textAllCaps="@bool/value_true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/margin_30"
                android:background="#00000000"
                android:text="@string/btn_forgot_password"
                android:textStyle="bold"
                android:textAllCaps="@bool/value_false"
                android:textColor="@color/colorPrimary" />
            <!-- Link to Login Screen -->
            <Button
                android:id="@+id/btn_signup"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@android:color/transparent"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- ProgressBar shown only when the Login takes longer -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>