<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/MatchParent"
        android:background="@android:color/black"
        android:fitsSystemWindows="@bool/value_true"
        tools:context="com.game.xvso.uifirebase.SignupActivity">

        <LinearLayout
            style="@style/MatchParent"
            android:background="@drawable/earth"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MatchWrap"
                android:textColorHint="@android:color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    style="@style/MatchWrap"
                    android:background="@drawable/edit_field"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="@bool/value_true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="@bool/value_true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MatchWrap"
                android:textColorHint="@android:color/white"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/MatchWrap"
                android:focusableInTouchMode="@bool/value_true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/edit_field"
                    android:backgroundTint="@color/white"
                android:singleLine="@bool/value_true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Link to Login Screen -->
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_purple_transparent"
                android:text="@string/action_sign_in_short"
                android:layout_marginTop="@dimen/margin_20"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reset_password_button"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/margin_30"
                android:background="#00000000"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="@bool/value_false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/btn_link_to_login"
                android:background="@android:color/transparent"
                android:textAllCaps="@bool/value_false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>